# DRIVING-EXAM-STADISTIC

./: .gitignore  README.md  driving-exam-statistic.spec  main.spec  pyproject.toml  requirements.txt
driving_exams/: __main__.py  main.py  main.spec
driving_exams/services/: charts.py  csv_importer.py  database.py  reports.py
driving_exams/ui/: main_window.ui  main_window_ui.py
packaging/: build_deb.sh  build_linux_exe.sh
packaging/arch/: PKGBUILD  make_source_tarball.sh
packaging/deb/: driving-exam-statistic.desktop  sign_and_verify_deb.sh
